--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@ thead {
 }
 
 th {
-  @apply p-1 md:p-3 border-2 text-slate-200 border-slate-800;
+  @apply p-1 md:p-3 border-2 text-slate-200 border-slate-800 font-extrabold;
 }
 
 td {
